# xuecheng-actix-web-seaorm-rust-backend

./: .env  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/model/: mod.rs  page_params.rs  page_result.rs
common/src/response/: app_err.rs  app_response.rs  handle_response.rs  mod.rs
common/src/utils/: cors.rs  mod.rs
content/: Cargo.toml
content/src/: main.rs
content/src/api/: course_base_info_controller.rs  course_category_controller.rs  init.rs  mod.rs
content/src/model/: mod.rs
content/src/model/api/: course_base_info_controller.rs
content/src/model/dto/: course_category_tree.rs  mod.rs  query_course_params.rs
content/src/model/po/: course_audit.rs  course_base.rs  course_category.rs  course_market.rs  course_publish.rs  course_publish_pre.rs  course_teacher.rs  mod.rs  mq_message.rs  mq_message_history.rs  prelude.rs  teachplan.rs  teachplan_media.rs  teachplan_work.rs
content/src/service/: course_base_info_service.rs  course_category_service.rs  mod.rs
system/: Cargo.toml
system/src/: lib.rs  main.rs
system/src/api/: dictionary_controller.rs  mod.rs
system/src/model/: mod.rs
system/src/model/po/: dictionary.rs  mod.rs  prelude.rs
system/src/service/: dictionary_service.rs  mod.rs
