[workspace]
members = ["common","content", "system"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
common = { path = "./common"}
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros" ] }
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
validator = {version = "0.16.0", features = ["derive"]}
thiserror ="1.0.40"
rust_decimal = "1.29"
rust_decimal_macros = "1.29"
actix-cors = "0.6.4"