[package]
name = "content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
actix-web.worksapce =true
sea-orm.workspace = true
serde.workspace = true
futures.workspace = true
serde_json.workspace = true
validator = {workspace = true}
thiserror = {workspace = true}
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
utoipa-swagger-ui = {workspace = true}
utoipa = {workspace = true}